--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 <div class="key" onclick="playChord(['C4', 'E4', 'G4'], 'Acorde DO (Raíz) – Tres caminos se funden en uno.')">C Mayor (C–E–G)</div>
 <div class="key" onclick="playChord(['E4', 'G4', 'C5'], 'Primera inversión – El viaje comienza desde el corazón.')">C – 1ra inversión (E–G–C)</div>
 <div class="key" onclick="playChord(['G4', 'C5', 'E5'], 'Segunda inversión – La luz desciende, firme y clara.')">C – 2da inversión (G–C–E)</div>
+
+<hr>
+
 <div class="key" onclick="playChord(['C4', 'Ab4', 'F4'], 'Armonía negativa – Lo que fuiste, vuelve desde otro cielo.')">C en armonía negativa (C–Ab–F)</div>
 <div class="key" onclick="playChord(['Ab4','F4','C5'], '1ra inversión negativa – El corazón se abre desde la sombra.')">C negativa – 1ra inversión (Ab–F–C)</div>
 <div class="key" onclick="playChord(['F4', 'C5', 'Ab5'], '2da inversión negativa – La raíz canta desde el revés del alma.')">C negativa – 2da inversión (F–C–Ab)</div>
@@ -64,7 +67,7 @@
   
 
   <script>
-    const scale = [
+const scale = [
       { note: "C", freq: 261.63 },
       { note: "C#", freq: 277.18 },
       { note: "D", freq: 293.66 },
@@ -89,52 +92,143 @@
       container.appendChild(btn);
     });
 
+    // Versión embellecida con ADSR y filtro
     function playNote(frequency, message) {
       const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+      const now = audioCtx.currentTime;
+
       const oscillator = audioCtx.createOscillator();
-      oscillator.type = 'sine';
-      oscillator.frequency.setValueAtTime(frequency, audioCtx.currentTime);
-      oscillator.connect(audioCtx.destination);
-      oscillator.start();
-      oscillator.stop(audioCtx.currentTime + 1);
+      oscillator.type = 'triangle';
+      oscillator.frequency.setValueAtTime(frequency, now);
+
+      const gainNode = audioCtx.createGain();
+      const filter = audioCtx.createBiquadFilter();
+      filter.type = 'lowpass';
+      filter.frequency.setValueAtTime(1200, now);
+
+      oscillator.connect(filter);
+      filter.connect(gainNode);
+      gainNode.connect(audioCtx.destination);
+
+      // ADSR
+      const attack = 0.05;
+      const decay = 0.1;
+      const sustainLevel = 0.6;
+      const release = 0.3;
+      const duration = 1;
+
+      gainNode.gain.setValueAtTime(0, now);
+      gainNode.gain.linearRampToValueAtTime(1, now + attack);
+      gainNode.gain.linearRampToValueAtTime(sustainLevel, now + attack + decay);
+      gainNode.gain.setValueAtTime(sustainLevel, now + duration - release);
+      gainNode.gain.linearRampToValueAtTime(0, now + duration);
+
+      oscillator.start(now);
+      oscillator.stop(now + duration);
 
       document.getElementById('poetryBox').textContent = message;
     }
 
-function playChord(notes, message) {
-  const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-  const now = audioCtx.currentTime;
+    function playChord(notes, message) {
+      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+      const now = audioCtx.currentTime;
 
-  notes.forEach(note => {
-    const freq = typeof note === 'string' ? noteToFrequency(note) : note;
+      notes.forEach(note => {
+        const freq = typeof note === 'string' ? noteToFrequency(note) : note;
 
-    const oscillator = audioCtx.createOscillator();
-    oscillator.type = 'sine';
-    oscillator.frequency.setValueAtTime(freq, now);
-    oscillator.connect(audioCtx.destination);
-    oscillator.start(now);
-    oscillator.stop(now + 1);
-  });
+        const oscillator = audioCtx.createOscillator();
+        oscillator.type = 'triangle';
 
-  document.getElementById('poetryBox').textContent = message || '—';
-}
+        oscillator.frequency.setValueAtTime(freq, now);
 
-function playChordSequence(sequence) {
-  const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-  let currentTime = audioCtx.currentTime;
+        const gainNode = audioCtx.createGain();
+        const filter = audioCtx.createBiquadFilter();
+        filter.type = 'lowpass';
+        filter.frequency.setValueAtTime(1200, now);
 
-  sequence.forEach(({ notes, duration }) => {
-    notes.forEach(note => {
-      const freq = typeof note === 'string' ? noteToFrequency(note) : note;
-      const oscillator = audioCtx.createOscillator();
-      oscillator.type = 'sine';
-      oscillator.frequency.setValueAtTime(freq, currentTime);
-      oscillator.connect(audioCtx.destination);
-      oscillator.start(currentTime);
-      oscillator.stop(currentTime + duration);
-    });
-    currentTime += duration;
-  });
+        oscillator.connect(filter);
+        filter.connect(gainNode);
+        gainNode.connect(audioCtx.destination);
+
+        // ADSR (ataque más corto para acordes)
+        const attack = 0.03;
+        const decay = 0.1;
+        const sustainLevel = 0.5;
+        const release = 0.3;
+        const duration = 1;
+
+        gainNode.gain.setValueAtTime(0, now);
+        gainNode.gain.linearRampToValueAtTime(1, now + attack);
+        gainNode.gain.linearRampToValueAtTime(sustainLevel, now + attack + decay);
+        gainNode.gain.setValueAtTime(sustainLevel, now + duration - release);
+        gainNode.gain.linearRampToValueAtTime(0, now + duration);
+
+        oscillator.start(now);
+        oscillator.stop(now + duration);
+      });
+
+      document.getElementById('poetryBox').textContent = message || '—';
+    }
+
+    function playChordSequence(sequence) {
+      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+      let currentTime = audioCtx.currentTime;
+
+      sequence.forEach(({ notes, duration }) => {
+        notes.forEach(note => {
+          const freq = typeof note === 'string' ? noteToFrequency(note) : note;
+
+          const oscillator = audioCtx.createOscillator();
+          oscillator.type = 'triangle';
+
+          oscillator.frequency.setValueAtTime(freq, currentTime);
+
+          const gainNode = audioCtx.createGain();
+          const filter = audioCtx.createBiquadFilter();
+          filter.type = 'lowpass';
+          filter.frequency.setValueAtTime(1200, currentTime);
+
+          oscillator.connect(filter);
+          filter.connect(gainNode);
+          gainNode.connect(audioCtx.destination);
+
+          // ADSR para secuencias, más cortos porque son más rápidas
+          const attack = 0.02;
+          const decay = 0.05;
+          const sustainLevel = 0.6;
+          const release = 0.1;
+
+          gainNode.gain.setValueAtTime(0, currentTime);
+          gainNode.gain.linearRampToValueAtTime(1, currentTime + attack);
+          gainNode.gain.linearRampToValueAtTime(sustainLevel, currentTime + attack + decay);
+          gainNode.gain.setValueAtTime(sustainLevel, currentTime + duration - release);
+          gainNode.gain.linearRampToValueAtTime(0, currentTime + duration);
+
+          oscillator.start(currentTime);
+          oscillator.stop(currentTime + duration);
+        });
+
+        currentTime += duration;
+      });
+    }
+function noteToFrequency(note) {
+  const noteRegex = /^([A-G])(#|b)?(\d)$/;
+  const noteSemitones = { C: -9, D: -7, E: -5, F: -4, G: -2, A: 0, B: 2 };
+
+  const match = note.match(noteRegex);
+  if (!match) throw new Error('Nota inválida: ' + note);
+
+  let [, pitch, accidental, octave] = match;
+  octave = parseInt(octave);
+
+  let semitoneIndex = noteSemitones[pitch.toUpperCase()];
+  if (accidental === '#') semitoneIndex += 1;
+  else if (accidental === 'b') semitoneIndex -= 1;
+
+  // Semitonos desde A4:
+  const semitonesFromA4 = semitoneIndex + (octave - 4) * 12;
+
+  return 440 * Math.pow(2, semitonesFromA4 / 12);
 }
 
 function playDScaleNotes() {
@@ -158,26 +252,6 @@ function playDScaleChords() {
 
   playChordSequence(sequence);
   document.getElementById('poetryBox').textContent = 'Escala mayor de D en acordes DF#A EGB F#AC# GBD ACF# BDF# C#EG DFA';
-}
-
-    function noteToFrequency(note) {
-  const noteRegex = /^([A-G])(#|b)?(\d)$/;
-  const noteSemitones = { C: -9, D: -7, E: -5, F: -4, G: -2, A: 0, B: 2 };
-
-  const match = note.match(noteRegex);
-  if (!match) throw new Error('Nota inválida: ' + note);
-
-  let [, pitch, accidental, octave] = match;
-  octave = parseInt(octave);
-
-  let semitoneIndex = noteSemitones[pitch.toUpperCase()];
-  if (accidental === '#') semitoneIndex += 1;
-  else if (accidental === 'b') semitoneIndex -= 1;
-
-  // Semitonos desde A4:
-  const semitonesFromA4 = semitoneIndex + (octave - 4) * 12;
-
-  return 440 * Math.pow(2, semitonesFromA4 / 12);
 }
   </script>
 
