--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Altar Sonoro Pentatónico</title>
+  <title>Atril Sonoro Pentatónico</title>
   <style>
     body {
       background-color: #121212;
@@ -46,7 +46,7 @@
 
 <body>
 
-  <h1>Altar Sonoro Pentatónico</h1>
+  <h1>Atril Sonoro Pentatónico</h1>
   <p>Toca una nota. Deja que te hable.</p>
 
   <div id="noteButtons"></div>
