Adds the right C scale msg when playing it

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       const sequence = notes.map(note => ({ notes: [note], duration: 0.5 }));
 
       playChordSequence(sequence);
-      document.getElementById('poetryBox').textContent = 'Escala mayor de D en notas D Em F#m G A Bm C#dim D';
+      document.getElementById('poetryBox').textContent = 'Escala mayor de C en notas C Dm Em F G Am Bdim C';
     }
 
     function playDScaleChords() {
