moved styles to styles file and scripts to scripts file

--- a/index.html
+++ b/index.html
@@ -4,44 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Atril Sonoro Pentatónico</title>
-  <style>
-    body {
-      background-color: #121212;
-      color: #fff;
-      font-family: 'Georgia', serif;
-      text-align: center;
-      padding: 2em;
-    }
-
-    .key {
-      display: inline-block;
-      margin: 1em;
-      padding: 1em 2em;
-      border: 2px solid #fff;
-      border-radius: 1em;
-      background-color: #333;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-
-    .key:hover {
-      background-color: #444;
-    }
-
-    .poetry {
-      margin-top: 1em;
-      font-style: italic;
-      opacity: 0.8;
-    }
-
-    hr {
-      margin: 3em auto;
-      width: 60%;
-      border: none;
-      height: 1px;
-      background-color: #555;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -76,223 +39,7 @@
   <div class="key" onclick="playCScaleChords()">play C Major Scale (Acordes)</div>
   <div class="key" onclick="playDScaleChords()">play D Major Scale (Acordes)</div>
 
-
-
-
-  <script>
-    const scale = [
-      { note: "C", freq: 261.63 },
-      { note: "C#", freq: 277.18 },
-      { note: "D", freq: 293.66 },
-      { note: "D#", freq: 311.13 },
-      { note: "E", freq: 329.63 },
-      { note: "F", freq: 349.23 },
-      { note: "F#", freq: 369.99 },
-      { note: "G", freq: 392.00 },
-      { note: "G#", freq: 415.30 },
-      { note: "A", freq: 440.00 },
-      { note: "A#", freq: 466.16 },
-      { note: "B", freq: 493.88 }
-    ];
-
-    const container = document.getElementById("noteButtons");
-
-    scale.forEach(({ note, freq }) => {
-      const btn = document.createElement('div');
-      btn.className = 'key';
-      btn.textContent = note;
-      btn.onclick = () => playNote(freq, `Nota ${note} – Vibración: ${freq.toFixed(2)} Hz`);
-      container.appendChild(btn);
-    });
-
-    // Versión embellecida con ADSR y filtro
-    function playNote(frequency, message) {
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const now = audioCtx.currentTime;
-
-      const oscillator = audioCtx.createOscillator();
-      oscillator.type = 'triangle';
-      oscillator.frequency.setValueAtTime(frequency, now);
-
-      const gainNode = audioCtx.createGain();
-      const filter = audioCtx.createBiquadFilter();
-      filter.type = 'lowpass';
-      filter.frequency.setValueAtTime(1200, now);
-
-      oscillator.connect(filter);
-      filter.connect(gainNode);
-      gainNode.connect(audioCtx.destination);
-
-      // ADSR
-      const attack = 0.05;
-      const decay = 0.1;
-      const sustainLevel = 0.6;
-      const release = 0.3;
-      const duration = 1;
-
-      gainNode.gain.setValueAtTime(0, now);
-      gainNode.gain.linearRampToValueAtTime(1, now + attack);
-      gainNode.gain.linearRampToValueAtTime(sustainLevel, now + attack + decay);
-      gainNode.gain.setValueAtTime(sustainLevel, now + duration - release);
-      gainNode.gain.linearRampToValueAtTime(0, now + duration);
-
-      oscillator.start(now);
-      oscillator.stop(now + duration);
-
-      document.getElementById('poetryBox').textContent = message;
-    }
-
-    function playChord(notes, message) {
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const now = audioCtx.currentTime;
-
-      notes.forEach(note => {
-        const freq = typeof note === 'string' ? noteToFrequency(note) : note;
-
-        const oscillator = audioCtx.createOscillator();
-        oscillator.type = 'triangle';
-
-        oscillator.frequency.setValueAtTime(freq, now);
-
-        const gainNode = audioCtx.createGain();
-        const filter = audioCtx.createBiquadFilter();
-        filter.type = 'lowpass';
-        filter.frequency.setValueAtTime(1200, now);
-
-        oscillator.connect(filter);
-        filter.connect(gainNode);
-        gainNode.connect(audioCtx.destination);
-
-        // ADSR (ataque más corto para acordes)
-        const attack = 0.03;
-        const decay = 0.1;
-        const sustainLevel = 0.5;
-        const release = 0.3;
-        const duration = 1;
-
-        gainNode.gain.setValueAtTime(0, now);
-        gainNode.gain.linearRampToValueAtTime(1, now + attack);
-        gainNode.gain.linearRampToValueAtTime(sustainLevel, now + attack + decay);
-        gainNode.gain.setValueAtTime(sustainLevel, now + duration - release);
-        gainNode.gain.linearRampToValueAtTime(0, now + duration);
-
-        oscillator.start(now);
-        oscillator.stop(now + duration);
-      });
-
-      document.getElementById('poetryBox').textContent = message || '—';
-    }
-
-    function playChordSequence(sequence) {
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      let currentTime = audioCtx.currentTime;
-
-      sequence.forEach(({ notes, duration }) => {
-        notes.forEach(note => {
-          const freq = typeof note === 'string' ? noteToFrequency(note) : note;
-
-          const oscillator = audioCtx.createOscillator();
-          oscillator.type = 'triangle';
-
-          oscillator.frequency.setValueAtTime(freq, currentTime);
-
-          const gainNode = audioCtx.createGain();
-          const filter = audioCtx.createBiquadFilter();
-          filter.type = 'lowpass';
-          filter.frequency.setValueAtTime(1200, currentTime);
-
-          oscillator.connect(filter);
-          filter.connect(gainNode);
-          gainNode.connect(audioCtx.destination);
-
-          // ADSR para secuencias, más cortos porque son más rápidas
-          const attack = 0.02;
-          const decay = 0.05;
-          const sustainLevel = 0.6;
-          const release = 0.1;
-
-          gainNode.gain.setValueAtTime(0, currentTime);
-          gainNode.gain.linearRampToValueAtTime(1, currentTime + attack);
-          gainNode.gain.linearRampToValueAtTime(sustainLevel, currentTime + attack + decay);
-          gainNode.gain.setValueAtTime(sustainLevel, currentTime + duration - release);
-          gainNode.gain.linearRampToValueAtTime(0, currentTime + duration);
-
-          oscillator.start(currentTime);
-          oscillator.stop(currentTime + duration);
-        });
-
-        currentTime += duration;
-      });
-    }
-    function noteToFrequency(note) {
-      const noteRegex = /^([A-G])(#|b)?(\d)$/;
-      const noteSemitones = { C: -9, D: -7, E: -5, F: -4, G: -2, A: 0, B: 2 };
-
-      const match = note.match(noteRegex);
-      if (!match) throw new Error('Nota inválida: ' + note);
-
-      let [, pitch, accidental, octave] = match;
-      octave = parseInt(octave);
-
-      let semitoneIndex = noteSemitones[pitch.toUpperCase()];
-      if (accidental === '#') semitoneIndex += 1;
-      else if (accidental === 'b') semitoneIndex -= 1;
-
-      // Semitonos desde A4:
-      const semitonesFromA4 = semitoneIndex + (octave - 4) * 12;
-
-      return 440 * Math.pow(2, semitonesFromA4 / 12);
-    }
-
-    function playDScaleNotes() {
-      const notes = ['D4', 'E4', 'F#4', 'G4', 'A4', 'B4', 'C#5', 'D5'];
-      const sequence = notes.map(note => ({ notes: [note], duration: 0.5 }));
-
-      playChordSequence(sequence);
-      document.getElementById('poetryBox').textContent = 'Escala mayor de D en notas D Em F#m G A Bm C#dim D';
-    }
-
-    function playCScaleNotes() {
-      const notes = ['C4', 'D4', 'E4', 'F4', 'G4', 'A4', 'B4', 'C5'];
-      const sequence = notes.map(note => ({ notes: [note], duration: 0.5 }));
-
-      playChordSequence(sequence);
-      document.getElementById('poetryBox').textContent = 'Escala mayor de C en notas C Dm Em F G Am Bdim C';
-    }
-
-    function playDScaleChords() {
-      const sequence = [
-        { notes: ['D4', 'F#4', 'A4'], duration: 0.5 },   // D mayor
-        { notes: ['E4', 'G4', 'B4'], duration: 0.5 },    // E menor
-        { notes: ['F#4', 'A4', 'C#5'], duration: 0.5 },  // F# menor
-        { notes: ['G4', 'B4', 'D5'], duration: 0.5 },    // G mayor
-        { notes: ['A4', 'C#5', 'E5'], duration: 0.5 },   // A mayor
-        { notes: ['B4', 'D5', 'F#5'], duration: 0.5 },   // B menor
-        { notes: ['C#5', 'E5', 'G5'], duration: 0.5 },    // C# disminuido
-        { notes: ['D5', 'F#5', 'A5'], duration: 0.5 },   // D mayor
-      ];
-
-      playChordSequence(sequence);
-      document.getElementById('poetryBox').textContent = 'Escala mayor de D en acordes DF#A EGB F#AC# GBD ACF# BDF# C#EG DFA';
-    }
-
-    function playCScaleChords() {
-      const sequence = [
-        { notes: ['C4', 'E4', 'G4'], duration: 0.5 },   // C mayor
-        { notes: ['D4', 'F4', 'A4'], duration: 0.5 },   // D menor
-        { notes: ['E4', 'G4', 'B4'], duration: 0.5 },   // E menor
-        { notes: ['F4', 'A4', 'C5'], duration: 0.5 },   // F mayor
-        { notes: ['G4', 'B4', 'D5'], duration: 0.5 },   // G mayor
-        { notes: ['A4', 'C5', 'E5'], duration: 0.5 },   // A menor
-        { notes: ['B4', 'D5', 'F5'], duration: 0.5 },   // B disminuido
-        { notes: ['C5', 'E5', 'G5'], duration: 0.5 },   // C mayor
-      ];
-
-      playChordSequence(sequence);
-      document.getElementById('poetryBox').textContent = 'Escala mayor de C en acordes CEG DFA EGB FAC GBD ACE BDF CEG';
-    }
-  </script>
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
