Adds ear trainer with colors and degrees

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="key" onclick="playDScaleChords()">play D Major Scale (Acordes)</div>
 
   <div id="progressionBox" style="margin: 2em 0; padding: 1em; border: 1px solid #ccc;">
-    <h2>Ear trainer</h2>
+    <h2>Ear trainer (C scale)</h2>
 
     <div id="progressionDisplay" style="font-size: 1.5em; margin-bottom: 1em;">I → V → I</div>
     <button onclick="playProgression()">Reproducir secuencia</button>
