Adds style to buttons in the Ear Trainer

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <h2>Ear trainer (C scale)</h2>
 
     <div id="progressionDisplay" style="font-size: 1.5em; margin-bottom: 1em;">I → V → I</div>
-    <button onclick="playProgression()">Reproducir secuencia</button>
-    <button onclick="refreshProgression()" style="margin-left:1em;">Refresh</button>
+    <button class="key" onclick="playProgression()">Reproducir secuencia</button>
+    <button class="key" onclick="refreshProgression()" style="margin-left:1em;">Refresh</button>
   </div>
 
 
