--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="progressionDisplay" style="font-size: 1.5em; margin-bottom: 1em;">I → V → I</div>
     <button class="key" onclick="playProgression()">Reproducir secuencia</button>
-    <button class="key" onclick="refreshProgression()" style="margin-left:1em;">Refresh</button>
+    <button class="key" onclick="refreshProgression()" style="margin-left:1em;">Secuencia aleatoria</button>
   </div>
 
 
